--- a/style.css
+++ b/style.css
@@ -63,3 +63,10 @@ body{
     left: 0;
     min-height: 300px;
 }
+
+#carousel-btn{
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    z-index: 1;
+}
