--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,12 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+#loginModal .modal-header, #reserveModal .modal-header {
+  color: floralwhite;
+  background: #512DA8; }
+  #loginModal .modal-header button, #reserveModal .modal-header button {
+    color: floralwhite; }
+
+#loginModal .modal-body, #reserveModal .modal-body {
+  background: #D1C4E9; }
